# name: test_delete_member[uvloop-groups]
  'bar'
---
# name: test_delete_member[uvloop-groups].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
      },
      <class 'dict'> {
        'id': 'baz',
      },
    ],
  }
---
# name: test_delete_member[uvloop-users]
  'bar'
---
# name: test_delete_member[uvloop-users].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
      },
      <class 'dict'> {
        'id': 'baz',
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
      },
    ],
  }
---
# name: test_edit_member[uvloop-group-None]
  <class 'dict'> {
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  }
---
# name: test_edit_member[uvloop-group-None].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_edit_member[uvloop-group-reference]
  None
---
# name: test_edit_member[uvloop-group-reference].1
  None
---
# name: test_edit_member[uvloop-group-subdocument]
  None
---
# name: test_edit_member[uvloop-group-subdocument].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_edit_member[uvloop-user-None]
  <class 'dict'> {
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  }
---
# name: test_edit_member[uvloop-user-None].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      },
    ],
  }
---
# name: test_edit_member[uvloop-user-reference]
  None
---
# name: test_edit_member[uvloop-user-reference].1
  None
---
# name: test_edit_member[uvloop-user-subdocument]
  None
---
# name: test_edit_member[uvloop-user-subdocument].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_fetch_and_update_release[uvloop-200]
  <class 'dict'> {
    'body': '- add 1 isolate for Tobacco mosaic virus',
    'content_type': 'application/gzip',
    'download_url': 'https://github.com/virtool/ref-plant-viruses/releases/download/v1.0.2/reference.json.gz',
    'etag': '"f1a3f4d9330494be0ea4bb8de666cb21"',
    'filename': 'v1.0.2',
    'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.0.2',
    'name': 'v1.0.2',
    'newer': True,
    'published_at': '2018-11-29T22:57:49Z',
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
    'size': 3448888,
  }
---
# name: test_fetch_and_update_release[uvloop-304]
  <class 'dict'> {
    'etag': '"f1a3f4d9330494be0ea4bb8de666cb21"',
    'name': '1.0.0-fake-release',
    'newer': True,
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: test_fetch_and_update_release[uvloop-404]
  <class 'dict'> {
    'etag': None,
    'name': '1.0.0-fake-release',
    'newer': True,
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
